# autoware_ut

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README_autoware_platform_old.md  package.xml
config/: control.yaml  decisionmaker.yaml  detection.yaml  detection_viz.yaml  localization.yaml  openplanner.yaml  platform.yaml
config/carla/: sensors.json  sensors_no_cam.json  sensors_nvidia.json
config/svl/: README.md  autonomy_params.yaml  lexus.json  platform_params.yaml
launch/: autonomy.launch  control.launch  detection.launch  localization.launch  map.launch  nodes.launch  parameters.launch  planning.launch  platform.launch  startup.launch  startup_carla.launch  startup_prediction.launch
launch/detection/: fake_obstacle.launch  lidar_fake_perception.launch  obstacle_detection.launch  op_car_simulation.launch  pointpillars.launch  tl_recognition.launch  tracking.launch
launch/localization/: gpsins.launch  ndt.launch
launch/map/: autoware_vector_map.launch  lanelet2_map.launch  pointcloud_map.launch  waypoints.launch
launch/nodes/: diagnostics.launch  modern_mobility.launch
launch/planning/: decisionmaker.launch  openplanner.launch
launch/platform/: carla_sim.launch  lexus.launch  sim_mode.launch  svl_sim.launch
launch/simulation/scenario_simulation/: ego_simulation.launch  ego_simulation_with_sensors.launch
launch/tools/: bag_replay.launch  camera_lidar_calibration.launch  create_pcd_map.launch  decompress_image.launch  detection_viz.launch  joy_ssc.launch  mapping_data_collection.launch  mapping_record_waypoints.launch  oap_record.launch  play_bag.launch  record_waypoints.launch  test_calibration.launch  waypoint_creator_ut.launch  waypoint_following.launch
maps/: README.md
maps/lidar_align/vector_map/: area.csv  curb.csv  dtlane.csv  intersection.csv  lane.csv  line.csv  node.csv  whiteline.csv
maps/raadi_brake_test/vector_map/: curb.csv  dtlane.csv  lane.csv  line.csv  node.csv  point.csv  stopline.csv
maps/tartu/: dropoff_points.json
maps/tartu/lanelet2/: tartu_test_track4.osm
maps/tartu/paths/: delta_pocket_exit.csv  erm_U_50kmh.csv  erm_wp_parking_and_straight.csv  johvi_highway_50_roundabout_70.csv
maps/tartu/scenarios/: FollowLeadingVehicle.xosc
maps/tartu/vector_map/: area.csv  crosswalk.csv  curb.csv  dtlane.csv  lane.csv  line.csv  node.csv  point.csv  pole.csv  roadedge.csv  roadsign.csv  signaldata.csv  stopline.csv  tl_stoplines.json  tl_stoplines_carla.json  vector.csv  whiteline.csv
maps/tartu_demo_latest/: sim_signs.launch
maps/tartu_demo_latest/SimulationData/: SimuCar_1.csv
maps/tartu_demo_latest/vector_map/: area.csv  dtlane.csv  intersection.csv  lane.csv  line.csv  node.csv  point.csv  signaldata.csv  stopline.csv  tl_stoplines.json  vector.csv
maps/tartu_demo_route/: dropoff_points.json
maps/tartu_yielding/: dropoff_points.json
nodes/btn_engage/: btn_engage.py
nodes/button_panel/: button_panel.py
nodes/cvkf_track/: cvkf_tracker.py  track_gen.py
nodes/diagnostics_parser/: diagnostics_parser.py
nodes/heartbeat_notif/: heartbeat_notif.py
nodes/indicator_publisher/: indicator_publisher.py
nodes/lidar_radar_fusion/: lidar_radar_fusion.py
nodes/map_filter/: map_obstacle_filter.py
nodes/modern_mobility/: modern_mobility_node.py
nodes/obstacle_scenario_simulator/: README.md  obstacle_scenario_simulator.py
nodes/radar_pointcloud/: radar_pointcloud.py
nodes/radar_relay/: README.md  radar_relay.py
nodes/radar_track/: radar_filter.py  radar_tf.py  radar_track.py
nodes/rviz_labels_publisher/: rviz_labels_publisher.py
nodes/rviz_obstacle_generator/: rviz_obstacle_generator.py
nodes/sim_camera_info_publisher/: sim_camera_info_publisher.py
nodes/sim_radar_detector/: radar_tf.py  sim_radar_detector.py
nodes/sim_veh_status_publisher/: sim_veh_status_publisher.py
nodes/tl_detection/: ib_tls_http.py  ib_tls_mqtt.py  roi_merger.py
nodes/tl_visualizer/: tl_visualizer.cpp
nodes/trajectory_visualizer/: trajectory_visualizer.py
nodes/vectormap_filter/: vectormap_filter.cpp  vectormap_filter.h
rviz/: calibration_check.rviz  decision_maker.rviz  detection_viz.rviz  lidar_camera_overlay.rviz  mapping_data_collection.rviz  ndt_mapping.rviz  op_bag.rviz  op_sim.rviz  openplanner.rviz  openplanner_carla.rviz  openplanner_fullscreen.rviz  openplanner_prediction.rviz  openplanner_prediction_fullscreen.rviz  svl_demo.rviz  waypoint_creator.rviz  waypoint_following.rviz  waypoint_saving.rviz
scripts/: 01_cuda_10_install.bash  02_tensorflow_install.bash  03_autoware_install.bash  04_ut_pkgs_install.bash  README.md  autoware.ai.repos  autoware_ut.repos  carla.repos  carla_requirements.txt  carla_setup.bash  filter_sensor_bag.bash  record_mapping_bag.bash  save_pcd_map.bash
(+64 files in other folders)
